NR-7 Implement In-Memory Notification Entity with CRUD Endpoints - Schimbat CopyOnWriteArrayList cu ArrayList simplu